[tool.poetry]
name = "novision-navigator"
version = "0.1.0"
description = ""
authors = ["Dmitry Golubkov <master@hsdesign.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.3"
peewee = "^3.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
